--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.17.0",
-    "hbs": "^4.0.1",
+    "hbs": "^4.1.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "salt": "^0.5.5",
     "serve-favicon": "^2.5.0",
