--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.17.0",
+    "gsap": "file:gsap-bonus.tgz",
     "hbs": "^4.1.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
