--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "cloudinary": "^1.21.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "dotenv": "^6.0.0",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "express-session": "^1.17.0",
     "gsap": "file:gsap-bonus.tgz",
     "hbs": "^4.1.1",
@@ -27,6 +28,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "salt": "^0.5.5",
