--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "seed": "node seeds/defaultUsers"
   },
   "dependencies": {
+    "aws-sdk": "^2.656.0",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.18.3",
@@ -25,6 +26,7 @@
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
